--- a/index.html
+++ b/index.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>박진우 포트폴리오 2023</title>
+
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/jquery.fullpage.min.css">
+    <link rel="stylesheet" href="./css/slick.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
+
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/jquery.fullpage.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/portfolio.js"></script>
 </head>
 
 <body>
-    박진우
+    <header class="header">
+        <h1>
+            <a href="#main">박진우 포트폴리오 2023</a>
+        </h1>
+    </header>
+    <nav class="gnb">
+        <ul>
+            <li><a href="#main">menu01</a></li>
+            <li><a href="#portfolio01">menu02</a></li>
+            <li><a href="#portfolio02">menu03</a></li>
+            <li><a href="#portfolio03">menu04</a></li>
+            <li><a href="#portfolio04">menu05</a></li>
+            <li><a href="#portfolio05">menu06</a></li>
+        </ul>
+    </nav>
+    <div class="main">
+        <section class="section">001</section>
+        <section class="section">002</section>
+        <section class="section">003</section>
+        <section class="section">004</section>
+        <section class="section">005</section>
+        <section class="section">006</section>
+    </div>
+    <div class="mopen">
+        <button>open</button>
+    </div>
+    <div class="toTop">
+        <a href="#main">UP</a>
+    </div>
+    <footer class="footer">
+        &copy; park 2023 portfolio.
+    </footer>
 </body>
 
 </html>
